--- a/user/package.json
+++ b/user/package.json
@@ -1,17 +1,16 @@
 {
   "name": "user",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=prod node src/index.js",
+    "dev": "NODE_ENV=dev nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
-    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -20,5 +19,10 @@
     "mongoose": "^7.2.3",
     "uuid": "^9.0.0",
     "winston": "^3.9.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12",
+    "prettier": "2.7.1"
+  },
+  "description": ""
 }
